--- a/todo/templates/todo-list.html
+++ b/todo/templates/todo-list.html
@@ -1,7 +1,10 @@
 
 <template name="todo_list">
-    <div>
-      <h2>List of todos</h2>
-      <div class="list"></div>
-    </div>
+  <h1>Todo List</h1>
+  <div class="todo-list">
+  	<ul>
+	{{#each todo_items }}
+		<li><label><input type="checkbox" name="todos" id="todo_{{id}}">{{ title }}</label></li>
+	{{/each}}
+	</div>
 </template>
